test/types/unions/bad-access1.good
10
3.14
bad-access1.chpl:12: error: halt reached - illegal union access: attempted to access field 'x' but 'y' is currently active
